internal/irparser/antlrParser/ir_parser.go
// Code generated from IR.g4 by ANTLR 4.13.2. DO NOT EDIT.

package antlrParser // IR
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type IRParser struct {
	*antlr.BaseParser
}

var IRParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func irParserInit() {
	staticData := &IRParserStaticData
	staticData.LiteralNames = []string{
		"", "':'", "", "", "", "", "", "", "", "", "'('", "')'", "'['", "']'",
		"','", "'='", "'+'", "'-'", "'+='", "'-='", "'<'", "'>'", "'_'",
	}
	staticData.SymbolicNames = []string{
		"", "", "WS", "NEWLINE", "TYPE_KEYWORD", "REG", "LABEL", "INT", "STRING",
		"IDENTIFIER", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "EQ",
		"PLUS", "MINUS", "PLUS_EQ", "MINUS_EQ", "LT", "GT", "UNDERSCORE",
	}
	staticData.RuleNames = []string{
		"program", "line", "labelMarker", "instruction", "dest", "regList",
		"instrCall", "instrName", "typeName", "args", "arg", "value", "const_",
		"reg",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// IRParserInit initializes any static state used to implement IRParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewIRParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func IRParserInit() {
	staticData := &IRParserStaticData
	staticData.once.Do(irParserInit)
}

// NewIRParser produces a new parser instance for the optional input antlr.TokenStream.
func NewIRParser(input antlr.TokenStream) *IRParser {
	IRParserInit()
	this := new(IRParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &IRParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "IR.g4"

	return this
}

// IRParser tokens.
const (
	IRParserEOF          = antlr.TokenEOF
	IRParserT__0         = 1
	IRParserWS           = 2
	IRParserNEWLINE      = 3
	IRParserTYPE_KEYWORD = 4
	IRParserREG          = 5
	IRParserLABEL        = 6
	IRParserINT          = 7
	IRParserSTRING       = 8
	IRParserIDENTIFIER   = 9
	IRParserLPAREN       = 10
	IRParserRPAREN       = 11
	IRParserLBRACKET     = 12
	IRParserRBRACKET     = 13
	IRParserCOMMA        = 14
	IRParserEQ           = 15
	IRParserPLUS         = 16
	IRParserMINUS        = 17
	IRParserPLUS_EQ      = 18
	IRParserMINUS_EQ     = 19
	IRParserLT           = 20
	IRParserGT           = 21
	IRParserUNDERSCORE   = 22
)

// IRParser rules.
const (
	IRParserRULE_program     = 0
	IRParserRULE_line        = 1
	IRParserRULE_labelMarker = 2
	IRParserRULE_instruction = 3
	IRParserRULE_dest        = 4
	IRParserRULE_regList     = 5
	IRParserRULE_instrCall   = 6
	IRParserRULE_instrName   = 7
	IRParserRULE_typeName    = 8
	IRParserRULE_args        = 9
	IRParserRULE_arg         = 10
	IRParserRULE_value       = 11
	IRParserRULE_const_      = 12
	IRParserRULE_reg         = 13
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllLine() []ILineContext
	Line(i int) ILineContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(IRParserEOF, 0)
}

func (s *ProgramContext) AllLine() []ILineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILineContext); ok {
			len++
		}
	}

	tst := make([]ILineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILineContext); ok {
			tst[i] = t.(ILineContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Line(i int) ILineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *IRParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, IRParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4199008) != 0 {
		{
			p.SetState(28)
			p.Line()
		}

		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(34)
		p.Match(IRParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LabelMarker() ILabelMarkerContext
	Instruction() IInstructionContext

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_line
	return p
}

func InitEmptyLineContext(p *LineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_line
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) LabelMarker() ILabelMarkerContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelMarkerContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelMarkerContext)
}

func (s *LineContext) Instruction() IInstructionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitLine(s)
	}
}

func (p *IRParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, IRParserRULE_line)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case IRParserLABEL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(36)
			p.LabelMarker()
		}

	case IRParserREG, IRParserIDENTIFIER, IRParserLBRACKET, IRParserUNDERSCORE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(37)
			p.Instruction()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILabelMarkerContext is an interface to support dynamic dispatch.
type ILabelMarkerContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LABEL() antlr.TerminalNode

	// IsLabelMarkerContext differentiates from other interfaces.
	IsLabelMarkerContext()
}

type LabelMarkerContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLabelMarkerContext() *LabelMarkerContext {
	var p = new(LabelMarkerContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_labelMarker
	return p
}

func InitEmptyLabelMarkerContext(p *LabelMarkerContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_labelMarker
}

func (*LabelMarkerContext) IsLabelMarkerContext() {}

func NewLabelMarkerContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LabelMarkerContext {
	var p = new(LabelMarkerContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_labelMarker

	return p
}

func (s *LabelMarkerContext) GetParser() antlr.Parser { return s.parser }

func (s *LabelMarkerContext) LABEL() antlr.TerminalNode {
	return s.GetToken(IRParserLABEL, 0)
}

func (s *LabelMarkerContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LabelMarkerContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LabelMarkerContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterLabelMarker(s)
	}
}

func (s *LabelMarkerContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitLabelMarker(s)
	}
}

func (p *IRParser) LabelMarker() (localctx ILabelMarkerContext) {
	localctx = NewLabelMarkerContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, IRParserRULE_labelMarker)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(IRParserLABEL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_instruction
	return p
}

func InitEmptyInstructionContext(p *InstructionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_instruction
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) CopyAll(ctx *InstructionContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type InstrNoDestContext struct {
	InstructionContext
}

func NewInstrNoDestContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InstrNoDestContext {
	var p = new(InstrNoDestContext)

	InitEmptyInstructionContext(&p.InstructionContext)
	p.parser = parser
	p.CopyAll(ctx.(*InstructionContext))

	return p
}

func (s *InstrNoDestContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstrNoDestContext) InstrCall() IInstrCallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstrCallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstrCallContext)
}

func (s *InstrNoDestContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterInstrNoDest(s)
	}
}

func (s *InstrNoDestContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitInstrNoDest(s)
	}
}

type CompoundAssignInstrContext struct {
	InstructionContext
	left  IRegContext
	op    antlr.Token
	right IRegContext
}

func NewCompoundAssignInstrContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *CompoundAssignInstrContext {
	var p = new(CompoundAssignInstrContext)

	InitEmptyInstructionContext(&p.InstructionContext)
	p.parser = parser
	p.CopyAll(ctx.(*InstructionContext))

	return p
}

func (s *CompoundAssignInstrContext) GetOp() antlr.Token { return s.op }

func (s *CompoundAssignInstrContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompoundAssignInstrContext) GetLeft() IRegContext { return s.left }

func (s *CompoundAssignInstrContext) GetRight() IRegContext { return s.right }

func (s *CompoundAssignInstrContext) SetLeft(v IRegContext) { s.left = v }

func (s *CompoundAssignInstrContext) SetRight(v IRegContext) { s.right = v }

func (s *CompoundAssignInstrContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompoundAssignInstrContext) AllReg() []IRegContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegContext); ok {
			len++
		}
	}

	tst := make([]IRegContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegContext); ok {
			tst[i] = t.(IRegContext)
			i++
		}
	}

	return tst
}

func (s *CompoundAssignInstrContext) Reg(i int) IRegContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegContext)
}

func (s *CompoundAssignInstrContext) PLUS_EQ() antlr.TerminalNode {
	return s.GetToken(IRParserPLUS_EQ, 0)
}

func (s *CompoundAssignInstrContext) MINUS_EQ() antlr.TerminalNode {
	return s.GetToken(IRParserMINUS_EQ, 0)
}

func (s *CompoundAssignInstrContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterCompoundAssignInstr(s)
	}
}

func (s *CompoundAssignInstrContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitCompoundAssignInstr(s)
	}
}

type ConstAssignContext struct {
	InstructionContext
}

func NewConstAssignContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ConstAssignContext {
	var p = new(ConstAssignContext)

	InitEmptyInstructionContext(&p.InstructionContext)
	p.parser = parser
	p.CopyAll(ctx.(*InstructionContext))

	return p
}

func (s *ConstAssignContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstAssignContext) Dest() IDestContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDestContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDestContext)
}

func (s *ConstAssignContext) EQ() antlr.TerminalNode {
	return s.GetToken(IRParserEQ, 0)
}

func (s *ConstAssignContext) Const_() IConst_Context {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConst_Context); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConst_Context)
}

func (s *ConstAssignContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterConstAssign(s)
	}
}

func (s *ConstAssignContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitConstAssign(s)
	}
}

type InstrWithDestContext struct {
	InstructionContext
}

func NewInstrWithDestContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InstrWithDestContext {
	var p = new(InstrWithDestContext)

	InitEmptyInstructionContext(&p.InstructionContext)
	p.parser = parser
	p.CopyAll(ctx.(*InstructionContext))

	return p
}

func (s *InstrWithDestContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstrWithDestContext) Dest() IDestContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDestContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDestContext)
}

func (s *InstrWithDestContext) EQ() antlr.TerminalNode {
	return s.GetToken(IRParserEQ, 0)
}

func (s *InstrWithDestContext) InstrCall() IInstrCallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstrCallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstrCallContext)
}

func (s *InstrWithDestContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterInstrWithDest(s)
	}
}

func (s *InstrWithDestContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitInstrWithDest(s)
	}
}

type InfixInstrContext struct {
	InstructionContext
	left  IRegContext
	op    antlr.Token
	right IRegContext
}

func NewInfixInstrContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InfixInstrContext {
	var p = new(InfixInstrContext)

	InitEmptyInstructionContext(&p.InstructionContext)
	p.parser = parser
	p.CopyAll(ctx.(*InstructionContext))

	return p
}

func (s *InfixInstrContext) GetOp() antlr.Token { return s.op }

func (s *InfixInstrContext) SetOp(v antlr.Token) { s.op = v }

func (s *InfixInstrContext) GetLeft() IRegContext { return s.left }

func (s *InfixInstrContext) GetRight() IRegContext { return s.right }

func (s *InfixInstrContext) SetLeft(v IRegContext) { s.left = v }

func (s *InfixInstrContext) SetRight(v IRegContext) { s.right = v }

func (s *InfixInstrContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InfixInstrContext) Dest() IDestContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDestContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDestContext)
}

func (s *InfixInstrContext) EQ() antlr.TerminalNode {
	return s.GetToken(IRParserEQ, 0)
}

func (s *InfixInstrContext) AllReg() []IRegContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegContext); ok {
			len++
		}
	}

	tst := make([]IRegContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegContext); ok {
			tst[i] = t.(IRegContext)
			i++
		}
	}

	return tst
}

func (s *InfixInstrContext) Reg(i int) IRegContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegContext)
}

func (s *InfixInstrContext) PLUS() antlr.TerminalNode {
	return s.GetToken(IRParserPLUS, 0)
}

func (s *InfixInstrContext) MINUS() antlr.TerminalNode {
	return s.GetToken(IRParserMINUS, 0)
}

func (s *InfixInstrContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.EnterInfixInstr(s)
	}
}

func (s *InfixInstrContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IRListener); ok {
		listenerT.ExitInfixInstr(s)
	}
}

func (p *IRParser) Instruction() (localctx IInstructionContext) {
	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, IRParserRULE_instruction)
	var _la int

	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		localctx = NewInstrWithDestContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(42)
			p.Dest()
		}
		{
			p.SetState(43)
			p.Match(IRParserEQ)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(44)
			p.InstrCall()
		}

	case 2:
		localctx = NewInstrNoDestContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(46)
			p.InstrCall()
		}

	case 3:
		localctx = NewConstAssignContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(47)
			p.Dest()
		}
		{
			p.SetState(48)
			p.Match(IRParserEQ)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(49)
			p.Const_()
		}

	case 4:
		localctx = NewInfixInstrContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(51)
			p.Dest()
		}
		{
			p.SetState(52)
			p.Match(IRParserEQ)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(53)

			var _x = p.Reg()

			localctx.(*InfixInstrContext).left = _x
		}
		{
			p.SetState(54)

			var _lt = p.GetTokenStream().LT(1)

			localctx.(*InfixInstrContext).op = _lt

			_la = p.GetTokenStream().LA(1)

			if !(_la == IRParserPLUS || _la == IRParserMINUS) {
				var _ri = p.GetErrorHandler().RecoverInline(p)

				localctx.(*InfixInstrContext).op = _ri
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(55)

			var _x = p.Reg()

			localctx.(*InfixInstrContext).right = _x
		}

	case 5:
		localctx = NewCompoundAssignInstrContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(57)

			var _x = p.Reg()

			localctx.(*CompoundAssignInstrContext).left = _x
		}
		{
			p.SetState(58)

			var _lt = p.GetTokenStream().LT(1)

			localctx.(*CompoundAssignInstrContext).op = _lt

			_la = p.GetTokenStream().LA(1)

			if !(_la == IRParserPLUS_EQ || _la == IRParserMINUS_EQ) {
				var _ri = p.GetErrorHandler().RecoverInline(p)

				localctx.(*CompoundAssignInstrContext).op = _ri
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(59)

			var _x = p.Reg()

			localctx.(*CompoundAssignInstrContext).right = _x
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDestContext is an interface to support dynamic dispatch.
type IDestContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsDestContext differentiates from other interfaces.
	IsDestContext()
}

type DestContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDestContext() *DestContext {
	var p = new(DestContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_dest
	return p
}

func InitEmptyDestContext(p *DestContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = IRParserRULE_dest
}

func (*DestContext) IsDestContext() {}

func NewDestContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DestContext {
	var p = new(DestContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = IRParserRULE_dest

	return p
}

func (s *DestContext) GetParser() antlr.Parser { return s.parser }

func (s *DestContext) CopyAll(ctx *DestContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *DestContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DestContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DestRegContext struct {
	DestContext
}

func NewDestRegContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DestRegContext {
	var p = new(DestRegContext)
